--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">About Me</a></li>
+								<li><a href="#intro">Publications</a></li>
 								<li><a href="#work">Research</a></li>
-								<li><a href="#about">Publications</a></li>
+								<li><a href="#about">About Me</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
