--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<div>
+							<div class="image" src="../images/headshot.jpg></div>
 						</div>
 						<div class="content">
 							<div class="inner">
