--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<div class="image" src="../images/headshot.jpg></div>
+							<div class="image" src="../images/headshot.jpg" 
+							     style="width:25px; height:25px"></div>
 						</div>
 						<div class="content">
 							<div class="inner">
