--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<div class="image" src="../images/headshot.jpg" 
-							     style="width:25px; height:25px"></div>
+						<div src="../images/headshot.jpg" 
+						     style="width:25px; height:25px">
 						</div>
 						<div class="content">
 							<div class="inner">
