--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div src="../images/headshot.jpg" 
-						     style="width:25px; height:25px">
+						<div class="image">
+							<div src="../images/headshot.jpg" 
+							     style="width:25px; height:25px">
+							</div>
 						</div>
 						<div class="content">
 							<div class="inner">
