--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<div>
+					<div src="../images/headshot.jpg" 
+						 style="width:50px; height:50px">
+					</div>
+				</div>
 				<!-- Header -->
 					<header id="header">
-						<div class="image">
-							<div src="../images/headshot.jpg" 
-							     style="width:25px; height:25px">
-							</div>
-						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Justin Cole</h1>
