--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<div>
-					<div src="../images/headshot.jpg" 
+					<img src="../images/headshot.jpg" 
 						 style="width:50px; height:50px">
-					</div>
 				</div>
 				<!-- Header -->
 					<header id="header">
