--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<div>
-					<img src="../images/headshot.jpg" 
+					<img src="images/headshot.jpg" 
 						 style="width:50px; height:50px">
 				</div>
 				<!-- Header -->
