--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Justin Cole</h1>
-								<p></p>
+								<p>First Year Graduate Student</p>
+								<br>
+								<p>Texas A&M University</p>
 							</div>
 						</div>
 						<nav>
