--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 							<div class="inner">
 								<h1>Justin Cole</h1>
 								<p>First Year Graduate Student</p>
-								<br>
 								<p>Texas A&M University</p>
 							</div>
 						</div>
@@ -49,7 +48,7 @@
 								<h2 class="major">Publications</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p><a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=AND&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FCole%2C%20J%2FCole%2C%20Justin%22&filter_database_fq_database=AND&filter_database_fq_database=database%3A%22astronomy%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FCole%2C%20J%2FCole%2C%20Justin%22)&fq_database=(database%3A%22astronomy%22)&q=%20%20author%3A%22%5ECole%2C%20Justin%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">
-									Stellar Kinematics and Environment at z~0.8 in the LEGA-C Survey: Massive, Slow-Rotators are Built First in Overdense Environments</p>
+									Cole et. al 2020: Stellar Kinematics and Environment at z~0.8 in the LEGA-C Survey: Massive, Slow-Rotators are Built First in Overdense Environments</p>
 								<p>Cole et. al 2020</p>
 							</article>
 
