--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Intro -->
 							<article id="publications">
 								<h2 class="major">Publications</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/fig3.pdf" alt="" /></span>
 								<p><a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=AND&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FCole%2C%20J%2FCole%2C%20Justin%22&filter_database_fq_database=AND&filter_database_fq_database=database%3A%22astronomy%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FCole%2C%20J%2FCole%2C%20Justin%22)&fq_database=(database%3A%22astronomy%22)&q=%20%20author%3A%22%5ECole%2C%20Justin%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">
 									Cole et. al 2020: Stellar Kinematics and Environment at z~0.8 in the LEGA-C Survey: Massive, Slow-Rotators are Built First in Overdense Environments</p>
 								<p>Cole et. al 2020</p>
