--- a/index.html
+++ b/index.html
@@ -55,16 +55,19 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/NGC1316.jpg" alt="" /></span>
-								<p>My main interest lies in the ways that galaxies evolve through
-								cosmic time. I have recently finished a study on the evolution of massive, quiescient
-								galaxies from z~0.8 to z~0 that demonstrated the need for massive, slow-rotators to be built via minor merging. Please see <a href="#publications">my publications</a> for more.</p>
+								<p>My main interest lies in the ways that massive galaxies evolve through
+								cosmic time. I have recently finished a <a href="#publications">study</a> on the evolution of massive, quiescient
+								galaxies from z~0.8 to z~0 that demonstrated the need for massive, slow-rotators to be built via minor merging.</p>
+								<p>I am also interested in studying the evolution of populations of galaxies and the Universe as a whole. Questions like: How do populations of galaxies change through cosmic time? Do galaxies care about the environment in which they live at different cosmic epochs? How and when do galaxies undergo changes to their dynamic structure or morphological structure?</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p></p>
+								<span class="image main"><img src="images/about_me.jpg" alt="" /></span>
+								<p>Hi, I'm Justin! I am a soccer and guitar player, who loves gardening, food, video games, heavy metal and lifting. I spend most of my free time either in the gym, on a soccer field, or in my garden. I love sharing the food I grow with people, from fresh herbs to the hottest peppers the climate will let grow.</p>
+								<p>I am from Pittsburgh, PA where I attended the Community College of Allegheny County and the University of Pittsburgh before continuing on to graduate school at Texas A&M University. My main motivation for attending graduate school is to hopefully become a professor and teach young scientists and astronomy lovers. I have volunteered for Astronomy-related outreach, conferences such as CUWiP, and tutoring for lower classmen at Pitt and Greater Pittsburgh Area High School students.</p>
+					
 							</article>
 
 						<!-- Contact -->
@@ -90,12 +93,12 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
+								<!--- <ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								</ul> --->
 							</article>
 
 						<!-- Elements -->
