--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#publications">Publications</a></li>
-								<li><a href="#research">Research</a></li>
 								<li><a href="#about">About Me</a></li>
+								<li><a href="#research">Research</a></li>
+								<li class="is-middle"><a href="#publications">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -65,7 +64,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/about_me.jpg" alt="" /></span>
-								<p>Hi, I'm Justin! I am a soccer and guitar player, who loves gardening, food, video games, heavy metal and lifting. I spend most of my free time either in the gym, on a soccer field, or in my garden. I love sharing the food I grow with people, from fresh herbs to the hottest peppers the climate will let grow.</p>
+								<p>Hi, I'm Justin! I am a soccer and guitar player, who loves gardening, food, video games, heavy metal and lifting. I spend most of my free time either in the gym, on a soccer field, or in my garden. I love sharing the food I grow with people, from fresh herbs to the hottest peppers the local climate will let grow.</p>
 								<p>I am from Pittsburgh, PA where I attended the Community College of Allegheny County and the University of Pittsburgh before continuing on to graduate school at Texas A&M University. My main motivation for attending graduate school is to hopefully become a professor and teach young scientists and astronomy lovers. I have volunteered for Astronomy-related outreach, conferences such as CUWiP, and tutoring for lower classmen at Pitt and Greater Pittsburgh Area High School students.</p>
 					
 							</article>
@@ -100,27 +99,6 @@
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul> --->
 							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
 
 while (!deck.isInOrder()) {
     print 'Iteration ' + i;
@@ -345,10 +323,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</div>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+					</footer> -->
 
 			</div>
 
