--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#about">About Me</a></li>
 								<li><a href="#research">Research</a></li>
-								<li><a href="#publications">Publications</a></li>
+								<li class="is-middle"><a href="#publications">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
