--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/NGC1316.jpg" alt="" /></span>
-								<p>My main interest lies in the ways that massive galaxies evolve through
-								cosmic time. I have recently finished a <a href="#publications">study</a> on the evolution of massive, quiescient
-								galaxies from z~0.8 to z~0 that demonstrated the need for massive, slow-rotators to be built via minor merging.</p>
-								<p>I am also interested in studying the evolution of populations of galaxies and the Universe as a whole. Questions like: How do populations of galaxies change through cosmic time? Do galaxies care about the environment in which they live at different cosmic epochs? How and when do galaxies undergo changes to their dynamic structure or morphological structure?</p>
+								<p>I currently work on the Large Early Galaxy Astrophysics Census (LEGA-C Survey), focusing primarily on quiescent galaxies. My main research interest lies in the ways these massive, quiescent galaxies evolve through
+								cosmic time. I have recently finished a study on the evolution of massive, quiescient
+								galaxies from z~0.8 to z~0 that demonstrated the need for massive, slow-rotators to be built first in the densest environments via minor merging (<a href="#publications">click here</a>).</p>
+								<p>I am also interested in studying the evolution of populations of galaxies and the Universe as a whole. Questions like: How do populations of galaxies change through cosmic time? Do galaxies care about the environment in which they live at different cosmic epochs? How and when do galaxies undergo changes to their dynamic structure or morphological structure?
+								I hope to investigate these questions with data from the James Webb Space Telescope and the CEERS program.</p>
 							</article>
 
 						<!-- About -->
