--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">About Me</a></li>
+								<li><a href="#research">Research</a></li>
+								<li><a href="#publications">Publications</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
