--- a/interactions.html
+++ b/interactions.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Justin Cole</title>
+		<title>Interactive Figures Justin Cole</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,73 +17,8 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<div>
-					<img src="images/headshot.jpg" 
-						 style="width:200px; height:200px">
+					<iframe ></iframe>
 				</div>
-				<!-- Header -->
-					<header id="header">
-						<div class="content">
-							<div class="inner">
-								<h1>Justin Cole</h1>
-								<p>First Year Graduate Student</p>
-								<p>Texas A&M University</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#about">About Me</a></li>
-								<li><a href="#research">Research</a></li>
-								<li><a href="#publications">Publications</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Intro -->
-							<article id="publications">
-								<h2 class="major">Publications</h2>
-								<p><a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=AND&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FCole%2C%20J%2FCole%2C%20Justin%22&filter_database_fq_database=AND&filter_database_fq_database=database%3A%22astronomy%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FCole%2C%20J%2FCole%2C%20Justin%22)&fq_database=(database%3A%22astronomy%22)&q=%20%20author%3A%22%5ECole%2C%20Justin%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">
-									Cole et. al 2020: Stellar Kinematics and Environment at z~0.8 in the LEGA-C Survey: Massive, Slow-Rotators are Built First in Overdense Environments</a></p>
-								<p></p>
-							</article>
-
-						<!-- Work -->
-							<article id="research">
-								<h2 class="major">Research</h2>
-								<span class="image main"><img src="images/NGC1316.jpg" alt="" /></span>
-								<p>I currently work on the Large Early Galaxy Astrophysics Census (LEGA-C Survey), focusing primarily on quiescent galaxies. My main research interest lies in the ways these massive, quiescent galaxies evolve through
-								cosmic time. I have recently finished a study on the evolution of massive, quiescient
-								galaxies from z~0.8 to z~0 that demonstrated the need for massive, slow-rotators to be built first in the densest environments via minor merging (<a href="#publications">click here</a>).</p>
-								<p>I have also been working on creating new, interactive figures and spectra for the LEGA-C Collaboration's static website. Using the python tool Bokeh, I have created interactive spectra for each viable galaxy in the survey and an interactive figure that allows you to search large parameter spaces. You can find examples of these interactions <a href="interactions.html">here</a>.</p>
-								<p>I am also interested in studying the evolution of populations of galaxies and the Universe as a whole. Questions like: How do populations of galaxies change through cosmic time? Do galaxies care about the environment in which they live at different cosmic epochs? How and when do galaxies undergo changes to their dynamic structure or morphological structure?
-								I hope to investigate these questions with data from the James Webb Space Telescope and the CEERS program.</p>
-							</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/about_me.jpg" alt="" /></span>
-								<p>Hi, I'm Justin! I am a soccer and guitar player, who loves gardening, food, video games, heavy metal and lifting. I spend most of my free time either in the gym, on a soccer field, or in my garden. I love sharing the food I grow with people, from fresh herbs to the hottest peppers the local climate will let grow.</p>
-								<p>I am from Pittsburgh, PA where I attended the Community College of Allegheny County and the University of Pittsburgh before continuing on to graduate school at Texas A&M University. My main motivation for attending graduate school is to hopefully become a professor and teach young scientists and astronomy lovers. I have volunteered for Astronomy-related outreach, conferences such as CUWiP, and tutoring for lower classmen at Pitt and Greater Pittsburgh Area High School students.</p>
-					
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<p>Email: jwc68@pitt.edu </p>
-								<p>Secondary: justin.cole152@gmail.com </p>
-							</article>
-					</div>
-
-				<!-- Footer 
-					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer> -->
-
 			</div>
 
 		<!-- BG -->
