--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
 							</article>
 					</div>
 
-				<!-- Footer 
+				<!---Footer---> 
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer> -->
+						<ul class="icons">
+						    <li><a href="https://github.com/jwc68" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						</ul>
+					</footer>
 
 			</div>
 
