--- a/interactions.html
+++ b/interactions.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<div>
-					<iframe ></iframe>
+					<iframe src="interactive_spectrum_M7_ID_156588.html"></iframe>
 				</div>
 			</div>
 
