--- a/interactions.html
+++ b/interactions.html
@@ -16,9 +16,17 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
+				<p>I have been working on creating interactive spectra for all viable objects in the LEGA-C survey like the one shown below.</p>
+				<h2>Interactions:</h2>
+				<p>Clicking on a label in the legend of the figure will mute, or 'hide', the data it describes.</p>
+				<p>Clicking and dragging to draw a box around data will zoom into the data you have drawn a box around. </p>
+				<p>In the top-right portion of the figure, there are additional tools such as a reset button and a "Pan Tool" that will let you pan the data horizontally.</p>
+				<p>Finally, the buttons under the figure will toggle the emissions-/absorption-line bands and labels on/off. </p>
 				<div>
-					<iframe src="interactive_spectrum_M7_ID_156588.html"></iframe>
+					<iframe src="interactive_spectrum_M7_ID_156588.html"
+						style="height: 500px; width: 1200px; top: 50px; position: auto"></iframe>
 				</div>
+				<p>These figures were created using the <a href="https://bokeh.org/">Bokeh</a> package from Python v3.7. 
 			</div>
 
 		<!-- BG -->
