--- a/interactions.html
+++ b/interactions.html
@@ -24,7 +24,7 @@
 				<p>Finally, the buttons under the figure will toggle the emissions-/absorption-line bands and labels on/off. </p>
 				<div>
 					<iframe src="interactive_spectrum_M7_ID_156588.html"
-						style="height: 500px; width: 1200px; top: 50px; position: auto"></iframe>
+						style="height: 500px; width: 1200px; top: 50px; left: 100px; position: absolute"></iframe>
 				</div>
 				<p>These figures were created using the <a href="https://bokeh.org/">Bokeh</a> package from Python v3.7. 
 			</div>
