--- a/interactions.html
+++ b/interactions.html
@@ -22,10 +22,10 @@
 				<p>Clicking and dragging to draw a box around data will zoom into the data you have drawn a box around. </p>
 				<p>In the top-right portion of the figure, there are additional tools such as a reset button and a "Pan Tool" that will let you pan the data horizontally.</p>
 				<p>Finally, the buttons under the figure will toggle the emissions-/absorption-line bands and labels on/off. </p>
-				<div>
+				<center>
 					<iframe src="interactive_spectrum_M7_ID_156588.html"
-						style="height: 500px; width: 1200px; top: 50px; left: 100px; position: absolute"></iframe>
-				</div>
+						style="height: 500px; width: 1200px; top: 50px"></iframe>
+				</center>
 				<p>These figures were created using the <a href="https://bokeh.org/">Bokeh</a> package from Python v3.7. 
 			</div>
 
